Put links and link-methods into seperate file

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   <!-- AngularJs files -->
   <script src="js/alotoc.js"></script>
   <script src="js/menu.js"></script>
+  <script src="js/links.js"></script>
 </body>
 
 </html>
