Add back to top button

--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
 
   </div> <!--Wrapper-->
 
+  <!--Btn for going back up-->
+  <div class="toTop" onclick="goToTop()">
+    <svg width="51" height="51">
+      <circle cx="25" cy="25" r="25"></circle>
+      <line x1="17" y1="35" x2="33" y2="35"></line>
+      <line x1="25" y1="35" x2="25" y2="15"></line>
+      <line x1="25" y1="15" x2="17" y2="20"></line>
+      <line x1="25" y1="15" x2="33" y2="20"></line>
+    </svg>
+  </div> <!--ToTop-->
+
   <!-- AngularJs files -->
   <script src="js/alotoc.js"></script>
   <script src="js/menu.js"></script>
