--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <meta charset="utf-8">
+<meta name="description" content="A website for a clock">
+<meta name="keywords" content="Alotoc, clock, on top">
+<meta name="author" content="Kazeheki">
 <html>
 <head>
   <title>ALOTOC</title>
