--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <td class ="hoverable"  onclick="goToGit()">Github</td>
             <td class ="hoverable"  onclick="goToScreenshots()">Screenshots</td>
             <td class ="hoverable"  onclick="goToDocu()">Code Documentation</td>
+            <td class ="hoverable" onclick="goToHelp()">Help</td>
           </tr>
         </table>
       </div> <!--Menu-->
@@ -52,6 +53,7 @@
           <li class ="hoverable" onclick="goToGit()">Github</li>
           <li class ="hoverable" onclick="goToScreenshots()">Screenshots</li>
           <li class ="hoverable" onclick="goToDocu()">Code Documentation</li>
+          <li class ="hoverable" onclick="goToHelp()">Help</li>
         </ul>
       </div> <!--MenuList-->
     </header>
