--- a/mainContent.html
+++ b/mainContent.html
@@ -1,43 +1,39 @@
 <div id="mainContent">
-  <h1>Ever wanted a cool clock that will never vanish behind stupid windows and frames?</h1>
-  <p>
-    Now you can get it!
-    <br></br>
-    Alotoc (short for: <b><u>Al</u></b>ways <b><u>o</u></b>n <b><u>to</u></b>p <b><u>c</u></b>lock) is the clock you always wanted!
-    It will always stay on top of everything.
-    <br></br>
-    Useful for:
-    <ul>
-      <li>Gamers playing in fullscreen mode and being annoyed by the "Windows" clock only being on the main screen</li>
-      <li>Anyone else, annoyed by the "Windows" clock only being on the main screen ;P</li>
-      <li>Anyone who wants a bigger clock, anywhere on the screen</li>
-    </ul>
+    <h1>Ever wanted a cool clock that will never vanish behind stupid windows and frames?</h1>
+    <p>
+        Now you can get it!
+        <br></br>
+        Alotoc (short for: <b><u>Al</u></b>ways <b><u>o</u></b>n <b><u>to</u></b>p <b><u>c</u></b>lock) is the clock you always wanted! It will always stay on top of everything.
+        <br></br>
+        Useful for:
+        <ul>
+            <li>Gamers playing in fullscreen mode and being annoyed by the "Windows" clock only being on the main screen</li>
+            <li>Anyone else, annoyed by the "Windows" clock only being on the main screen ;P</li>
+            <li>Anyone who wants a bigger clock, anywhere on the screen</li>
+        </ul>
 
+        <br></br>
+        <h3><u>Features</u></h3>
+        <ul>
+            <li>ALWAYS on top of everything <span style="font-size:10px">(except you or Windows minimize it)</span></li>
+            <li>Draggable</li>
+            <li>Color is selectable (you can type in the hex-value of a color if you want to)</li>
+            <li>Displays the same time as your standard computer clock</li>
+        </ul>
+    </p>
     <br></br>
-    <h3><u>Features</u></h3>
-    <ul>
-      <li>ALWAYS on top of everything</li>
-      <li>Draggable</li>
-      <li>Color is selectable (you can type in the hex-value of a color if you want to)</li>
-      <li>Displays the same time as your standard computer clock</li>
-    </ul>
-  </p>
-  <br></br>
-  <p>
-    <h3><u>How to use?</u></h3>
-    You can download the current version and source code <a href="https://github.com/Kazeheki/Alotoc/releases">here</a>. But you only need the
-    <i>Alotoc.jar</i> file which you can download directly <a href="https://github.com/Kazeheki/Alotoc/releases/download/v1.2/Alotoc.jar">here</a>.
-    <br></br>
-    Now you simply have to execute the <i>.jar</i> file.
-    Once done the clock apears right where your cursor is.
-    <br></br>
-    At the top right corner you can find a "X" marking the quit button and an "O" marking the options/preferences.
-    The preferences button will open a new window where you can select a preset color or type a hex-value of any color you want.
-    If you typed in a color, don't forget to hit the "GO" button!
-    Both the clock and the preferences window are draggable to wherever you want them to be.
-  </p>
+    <p>
+        <h3><u>How to use?</u></h3> You can download the current version and source code <a href="https://github.com/Kazeheki/Alotoc/releases">here</a>. But you only need the
+        <i>Alotoc.jar</i> file which you can download directly <a href="https://github.com/Kazeheki/Alotoc/releases/download/v1.2/Alotoc.jar">here</a>.
+        <br></br>
+        Now you simply have to execute the <i>.jar</i> file. Once done the clock apears right where your cursor is.
+        <br></br>
+        At the top right corner you can find a "X" marking the quit button and an "O" marking the options/preferences. The preferences button will open a new window where you can select a preset color or type a hex-value of any color you want. If you typed in
+        a color, don't forget to hit the "GO" button! Both the clock and the preferences window are draggable to wherever you want them to be.
+    </p>
 
-  <p>
-    If you have any suggestions for me or find any bugs, please contact me:  <a href="mailto:kazeheki@web.de">kazeheki@web.de</a>.
-  </p>
-</div> <!--Content-->
+    <p>
+        If you have any suggestions for me or find any bugs, please contact me: <a href="mailto:kazeheki@web.de">kazeheki@web.de</a>.
+    </p>
+</div>
+<!--Content-->
