Add forgotten help stuff.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                         <td class="hoverable" onclick="goToGit()">Github</td>
                         <td class="hoverable" onclick="goToScreenshots()">Screenshots</td>
                         <td class="hoverable" onclick="goToDocu()">Code Documentation</td>
+                        <td class="hoverable" onclick="goToHelp()">Help</td>
                     </tr>
                 </table>
             </div>
@@ -64,6 +65,7 @@
                     <li class="hoverable" onclick="goToGit()">Github</li>
                     <li class="hoverable" onclick="goToScreenshots()">Screenshots</li>
                     <li class="hoverable" onclick="goToDocu()">Code Documentation</li>
+                    <li class="hoverable" onclick="goToHelp()">Help</li>
                 </ul>
             </div>
             <!--MenuList-->
